sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (tab: Array[Int])Unit.
Unspecified value parameter tab.
		bubbleSort();
                          ^AlgBubbleSort1:3: error: not found: value long
  long = tab.length
  ^AlgBubbleSort1:4: error: not found: value long
  for(i<- 0 to long-1)
               ^AlgBubbleSort1:7: error: not found: value j
      echange(tab(i), tab(j))
                          ^